# broughlike-tutorial-ports

./: LICENSE  README.md  index.html
c/: .gitignore  README.md  asset_bytes.c  assets.c  broughlike-tutorial.c  build_run.bat  build_run.sh  game.c  spritesheet.c
c/pack/: .gitignore  build_run.sh  pack.c
docs/: index.html  pico-8.html  pico-8.js
docs/dragonruby/: dragonruby-asmjs.js  dragonruby-asmjs.js.mem  dragonruby-html5-loader.js  dragonruby-wasm.js  dragonruby-wasm.wasm  manifest.json
docs/elm/: elm.js
dragonruby/: run
dragonruby/app/: game.rb  main.rb  map.rb  monster.rb  spell.rb  tile.rb  util.rb
dragonruby/metadata/: game_metadata.txt
elm/: build  build-debug  elm.json  index.html
elm/src/: Game.elm  GameModel.elm  Main.elm  Map.elm  Monster.elm  Ports.elm  Randomness.elm  Spells.elm  Tile.elm  Tiles.elm  Types.elm
go/: .gitignore  .golangci.yml  README.md  go.mod  main.go  run
js/: game.js  map.js  monster.js  spell.js  tile.js  util.js
js-original/: index.html
nim/: .gitignore  README.md  assets.nim  broughlike_tutorial.nim  build  files_to_format  font.nim  game.nim  map.nim  monster.nim  nim.cfg  randomness.nim  raylib.nim  res.nim  run  sound.nim  spritesheet.nim  tile.nim  world.nim
pico8/: broughlike-tutorial.p8  edit  run
python/: .gitignore  broughlike_tutorial.py  broughlike_tutorial.spec  build-release  dev-requirements.txt  game.py  game_types.py  map.py  monster.py  pyrightconfig.json  spell.py  tile.py  util.py
rust/: Cargo.toml  run
rust/libs/state/: Cargo.toml
rust/libs/state/src/: state.rs
rust/src/: main.rs
(+20 files in other folders)
