[package]
name = "broughlike-tutorial"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.2.9"
# This is the version linked in the macroquad "0.2.9" docs.
miniquad = "0.3.0-alpha.11"
quad-snd = "0.1.0-alpha.1"
state = { path = "libs/state" }
